Added traefik manifests

--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -44,6 +44,8 @@ frontend http
     acl guac_back hdr(host) -i guac.trahan.dev
     acl torrents_back hdr(host) -i torrents.trahan.dev
     acl plex_back hdr(host) -i plex.trahan.dev
+    acl grafana_acl hdr(host) -i grafana.trahan.dev
+    acl prometheus_acl hdr(host) -i prometheus.trahan.dev
     #acl root_dir path_reg ^$|^/$
     #acl no_plex_header req.hdr_cnt(X-Plex-Device-Name) -i 0
     #http-request redirect code 301 location https://plex.trahan.dev/web/index.html if no_plex_header root_dir plex_back
@@ -61,6 +63,9 @@ frontend http
     use_backend jell if jelly_back
     use_backend guaca if guac_back
     use_backend torrents if torrents_back
+    use_backend grafana.trahan.dev if grafana_acl
+    use_backend prometheus.trahan.dev if prometheus_acl
+
 frontend stats
     mode http
     bind *:8404
@@ -105,7 +110,7 @@ backend torrents
 backend pgadm
     mode http
 
-    server pg1 pg-dbadmin:80 resolvers docker_resolver init-addr none check maxconn 8192
+    server pg1 pgadmin:80 resolvers docker_resolver init-addr none check maxconn 8192
 backend truenew
     mode http
 
@@ -126,6 +131,18 @@ backend jell
     mode http
 
     server jsrv1 jellyfin:8096 resolvers docker_resolver init-addr none
+backend grafana.trahan.dev
+    mode http
+
+    server grafsrv_2 grafana:3000 resolvers docker_resolver init-addr none check
+backend prometheus.trahan.dev
+    mode http
+
+    server prom_1 prometheus:9090 resolvers docker_resolver init-addr none check
+
+
+
+
 
 
 
