--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ terraform/postgres/.terraform.lock.hcl
 terraform/k3s/.terraform/**
 ansible/playbooks/k3s/roles/**
 terraform/proxmox_backup_server/**
+kubernetes/certs.sh
