--- a/kubernetes/traefik_ingress/prometheus.yaml
+++ b/kubernetes/traefik_ingress/prometheus.yaml
@@ -10,7 +10,7 @@ spec:
   - match: Host(`prometheus.trahan.dev`)
     kind: Rule
     services:
-    - name: prometheus-server
+    - name: prometheus-svc
       port: 9090
   tls:
     secretName: trahan-dev-cert
