--- a/kubernetes/storage/pvc-grafana.yaml
+++ b/kubernetes/storage/pvc-grafana.yaml
@@ -2,10 +2,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
+  namespace: default
 spec:
-  storageClassName: local-storage
   accessModes:
   - ReadWriteOnce
+  storageClassName: longhorn
   resources:
     requests:
-      storage: 5Gi
+      storage: 4Gi
+
