--- a/kubernetes/traefik_ingress/prometheus.yaml
+++ b/kubernetes/traefik_ingress/prometheus.yaml
@@ -14,3 +14,20 @@ spec:
       port: 9090
   tls:
     secretName: trahan-dev-cert
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: grafana-ingress
+  namespace: default
+spec:
+  entryPoints:
+  - websecure
+  routes:
+  - match: Host(`grafana.trahan.dev`)
+    kind: Rule
+    services:
+    - name: grafana
+      port: 80
+  tls:
+    secretName: trahan-dev-cert
