--- a/ansible/playbooks/resize-partition.yml
+++ b/ansible/playbooks/resize-partition.yml
@@ -4,14 +4,14 @@
   become: true
   vars:
     drives:
-      hostname: trahdb1
-      name: /dev/vda
+      { hostname: trahdb1, dev_name: /dev/vda }
 
   tasks:
     - name: Extend an existing partition to fill all available space
       community.general.parted:
-        device: /dev/vda
+        device: "{{ item.dev_name }}"
         number: "{{ sdb_info.partitions | length }}"
         part_end: "100%"
         resize: true
         state: present
+      with_items: "{{ drives }}"
