Added user creation and configuration playbook for dev servers

--- a/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
+++ b/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install Dev Applications and create users
-  hosts: dev-servers
+  # pass --limit=<hostname>
+  hosts: "{{ ansible_limit | default(omit) }}"
 
   vars_files:
     - vars.yml
@@ -15,12 +16,25 @@
     become: true
 
   tasks:
-    - name: Create jtrahan and devops users
-      ansible.builtin.apt:
-        name: postgresql,postgresql-contrib,python3-psycopg2,p7zip-full
+
+    - name: Ensure required groups are present
+      ansible.builtin.group:
+        name: "{{ item }}"
         state: present
-        update_cache: true
-      become: true
+      loop: "{{ dev_server_users | map(attribute='groups') | flatten | unique }}"
+
+    - name: Create users
+      ansible.builtin.user:
+        user: "{{ item.username }}"
+        comment: "{{ item.description }}"
+        state: present
+        uid: "{{ item.uid }}"
+        create_home: yes
+        generate_ssh_key: true
+        groups: "{{ item.groups }}"
+        password: "{{ (user_pw | selectattr('user', 'equalto', item.username) | map(attribute='password') | first) }}"
+        shell: "{{ item.shell }}"
+      loop: "{{ dev_server_users }}"
 
     - name: Ensure each user has their SSH keys added to authorized_keys
       ansible.builtin.authorized_key:
@@ -35,5 +49,15 @@
     - name: Install a list of packages
       ansible.builtin.apt:
         pkg: "{{ apt_packages }}"
-        state: present 
+        state: present
+
+    - name: Configure sudoers settings for users.
+      community.general.sudoers:
+        name: "{{ item.username }}-sudoers-config"
+        state: present
+        user: "{{ item.username }}"
+        commands: ALL
+        sudoers_path: /etc/sudoers.d
+        nopassword: "{{ item.nopw_sudo }}"
+      loop: "{{ dev_server_users }}"
 
