Add lines to include zones in named.conf in ansible playbook for dns

--- a/ansible/playbooks/dns/main.yml
+++ b/ansible/playbooks/dns/main.yml
@@ -99,6 +99,13 @@
       mode: '0644'
     become: yes
 
+  - name: Add line in named.conf to include db.trahan.dev zone file
+    ansible.builtin.lineinfile:
+      path: /etc/bind/named.conf
+      line: 'include "/etc/bind/db.trahan.dev";'
+      state: present
+    become: yes
+
   - name: Create reverse zone file for 0.0.10.in-addr.arpa from template
     ansible.builtin.template:
       src: templates/db.reverse_0_0_10.j2
@@ -108,6 +115,13 @@
       mode: '0644'
     become: yes
 
+  - name: Add line in named.conf to include 0.0.10.in-addr.arpa zone file
+    ansible.builtin.lineinfile:
+      path: /etc/bind/named.conf
+      line: 'include "/etc/bind/0.0.10.in-addr.arpa";'
+      state: present
+    become: yes
+
   - name: Create reverse zone file for 1.0.10.in-addr.arpa from template
     ansible.builtin.template:
       src: templates/db.reverse_1_0_10.j2
@@ -115,5 +129,12 @@
       owner: bind
       group: bind
       mode: '0644'
+    become: yes
+
+  - name: Add line in named.conf to include 1.0.10.in-addr.arpa zone file
+    ansible.builtin.lineinfile:
+      path: /etc/bind/named.conf
+      line: 'include "/etc/bind/1.0.10.in-addr.arpa";'
+      state: present
     become: yes
     notify: restart bind9
