Working when handler taks defined directly in main

--- a/ansible/playbooks/dns/debug.yml
+++ b/ansible/playbooks/dns/debug.yml
@@ -9,7 +9,8 @@
 
   # Include the handler using import_tasks
   handlers:
-  - import_tasks: handlers/restart-bind.yml
+  - name: cleanup_includes
+    import_tasks: remove_invalid_includes.yml
 
   tasks:
   - name: Include variables
@@ -18,13 +19,7 @@
     with_fileglob:
      - vars/*
 
-  - name: Debug ansible_fqdn and inventory_hostname
-    debug:
-      msg: "ansible_fqdn is {{ ansible_fqdn }}, inventory_hostname_short is {{ inventory_hostname_short }}"
-
-  - name: Debug nameservers variable
-    debug:
-      var: nameservers
-  - name: Debug domain variable
-    debug:
-      var: domain
+  - name: Debug - clean_invalid_includes called
+    ansible.builtin.debug:
+      msg: "Running the cleanup handler."
+    notify: cleanup_includes
