Cleaning up dns jinja templates

--- a/ansible/playbooks/dns/vars/vars.yaml
+++ b/ansible/playbooks/dns/vars/vars.yaml
@@ -5,9 +5,9 @@ forwarders: ['1.1.1.1', '8.8.8.8', '9.9.9.9']
 acl_allow_transfer: ['10.0.0.14', '10.0.0.15', '10.0.0.17', '10.0.0.64', '10.0.1.64', '127.0.0.0/8']
 
 nameservers:
-- {name: trah-dns-01, zone: trahan.dev, ip_address: '10.0.0.15', last: 15}
-- {name: trahdns2, zone: trahan.dev, ip_address: '10.0.0.14', last: 14}
-- {name: trahdns3, zone: trahan.dev, ip_address: '10.0.0.17', last: 17}
+- {name: trah-dns-01, zone: trahan.dev, ip_address: '10.0.0.15', last: 15, ns_name: ns1}
+- {name: trahdns2, zone: trahan.dev, ip_address: '10.0.0.14', last: 14, ns_name: ns2}
+- {name: trahdns3, zone: trahan.dev, ip_address: '10.0.0.17', last: 17, ns_name: ns3}
 
 dns_records:
 - {host: vm1, type: A, zone: trahan.dev, record_value: '10.0.1.64'}
