Added playbook for keepalived config

--- a/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
+++ b/ansible/playbooks/initial_dev_config/install_packages_and_add_users.yml
@@ -4,7 +4,8 @@
   hosts: "{{ ansible_limit | default(omit) }}"
 
   vars_files:
-    - vars.yml
+    #- vars.yml
+    - devops_vars.yml
     - vault.yml
   become: yes
 
