--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 ansible/playbooks/initial_dev_config/vars.yml
+ansible/playbooks/postgres/.env
+python/__pycache__/
+python/dns-venv/
+python/dns_parser.log
+python/test.yaml
+python/testy.yaml
+python/vars.yaml
+python/yamltest.yaml
+python/zone.txt
+scripts/bash/renew_certs.sh
+terraform/scratch_vms/.terraform/
+**/*vault.yml
+**/*vault.yaml
+**/vault.yml
+**/vault.yaml
 **app.log
 **/venv**
 scripts/bash/cloudinit/devserver.yaml
