--- a/ansible/playbooks/dns/debug.yml
+++ b/ansible/playbooks/dns/debug.yml
@@ -21,5 +21,6 @@
 
   - name: Debug - clean_invalid_includes called
     ansible.builtin.debug:
-      msg: "Running the cleanup handler."
+      msg: "Running the cleanup handler. {{ nameservers.i}}"
     notify: cleanup_includes
+    loop: 
